fixed jumpy scroll

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -39,58 +39,158 @@ body {
 * HEADER
 *******************************************/
 
-
-/*THINGS TO CHANGE ONCE JS MAKES THE SHARE BUTTONS WORK*/
-.title {
-  height: 83px;
+.at_a11y {
+    display: none;
 }
-
-.headerimage {
-  top: 70px;
-}
-/*END - THINGS TO CHANGE */
 
 #header-pinned {
-    font: 16px Lato;
-    color: #333;
+    background: #FFFFFF;
+    border-bottom: 2px solid #EEEEEE;
+    color: #333333;
+    font: "Avenir LT W01_55 Roman1475520","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 16px;
     font-weight: 400;
-    /* margin-right: 100px; */
+    height: 56px;
+    left: 0;
     position: fixed;
     top: 0px;
-    left: 0;
+    transition: top 0.25s linear;
     width: 100%;
-    background: #fff;
-    border-bottom: 2px solid #eee;
     z-index: 999;
     -webkit-transition: top 0.25s linear;
     -moz-transition: top 0.25s linear;
     -o-transition: top 0.25s linear;
-    transition: top 0.25s linear;
+}
+
+#header-pinned * {
+  color: #333333;
+  font-weight: 300;
+  text-decoration: none;
+}
+
+#header-pinned .share-icons {
+    background-color: transparent;
+    width: 69px;
+    height: 50px;
+    margin: 0;
+    padding: 0;
+    top: 0;
+    width: 60px;
+    position: absolute;
+    right: 0;
+}
+
+#header-pinned .share-icons .shareThisB {
+    display: block;
+    background-repeat: no-repeat;
+    background-image: url(https://www.urban.org/sites/all/themes/urban/images/generated/icons-s8fe141aaaa.png);
+    background-position: 0 -2396px;
+    height: 32px;
+    width: 32px;
+    float: none;
+    margin: 0 auto;
+}
+
+#header-pinned .share-icons .shareThisP {
+    border-top: 0;
+    border-left: 1px solid #e6e5e5;
+    height: 56px;
+    padding: 11px 0 0;
+}
+
+#header-pinned .share-icons .shareThisW {
+    background-color: #fff;
+    /* border: 1px solid #e6e5e5; */
+    position: absolute;
+    top: 50px;
+    left: -100px;
+    padding: 5px;
+    border-top: 0;
+    width: 160px;
+    z-index: 3;
+    display: none;
+    float: none;
+    top: 50px;
+    right: 0;
+    left: auto;
+    width: 300px;
+    text-align: right;
+    border: 0;
+    background: transparent;
+}
+
+#header-pinned .share-icons .addthis_toolbox {
+    display: inline-block;
+    width: auto;
+    /* border: 1px solid #e6e5e5; */
+    border-top: 0;
+    background: #fff;
+    padding: 10px 10px 0 0;
+    margin: 0 auto;
+}
+
+#header-pinned .share-icons .addthis_toolbox a {
+    margin-bottom: 5px;
+}
+
+#header-pinned .share-icons [class^="addthis_button_"] {
+    display: inline-block !important;
+    margin: 0 0 0 10px;
+}
+
+#header-pinned .share-icons .at15t_twitter.at16t_twitter, #header-pinned .share-icons .addthis_button_facebook {
+    display: block;
+    background-repeat: no-repeat;
+    background-image: url(https://www.urban.org/sites/all/themes/urban/images/generated/icons-s8fe141aaaa.png);
+    background-position: 0 -2056px;
+    height: 32px;
+    width: 32px;
+}
+
+#header-pinned .share-icons .at15t_twitter.at16t_twitter, #header-pinned .share-icons .addthis_button_twitter {
+    display: block;
+    background-repeat: no-repeat;
+    background-image: url(https://www.urban.org/sites/all/themes/urban/images/generated/icons-s8fe141aaaa.png);
+    background-position: 0 -1169px;
+    height: 32px;
+    width: 32px;
+}
+
+#header-pinned .share-icons .at15t_email.at16t_email, #header-pinned .share-icons .addthis_button_email {
+    display: block;
+    background-repeat: no-repeat;
+    background-image: url(https://www.urban.org/sites/all/themes/urban/images/generated/icons-s8fe141aaaa.png);
+    background-position: 0 -1449px;
+    height: 32px;
+    width: 32px;
 }
 
 #header-pinned .site-logo {
+    background: url(/img/tpcLogo.png) no-repeat;
+    background-size: 44px 37px;
     display: block;
-    width: 274px;
-    height: 72px;
-    position: absolute;
+    height: 37px;
     left: 10px;
-    margin-top: 7px;
-    background: url(https://placekitten.com/274/72) no-repeat;
-    background-size: 274px 72px;
+    margin-top: 9px;
+    position: absolute;
+    width: 44px;
 }
 
 #header-pinned .title {
   font-size: 20px;
-  margin-left: 80px;
-  font-size: 14px;
-  line-height: 49px;
-  margin: 0 65px 0 55px;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+  line-height: 56px;
+  margin: 0 80px 0 55px;
   overflow: hidden;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  white-space: nowrap;
 }
 
-#header-pinned .title a {
+#header-pinned > div.title > span {
+  margin-left: 20px;
+}
+
+#header-pinned .title span, #header-pinned .title a {
   display: inline;
 }
 
@@ -165,6 +265,7 @@ div.card-header.active-hover {
 }
 
 #form-illo text {
+  font: "Avenir LT W01_55 Roman1475520","Helvetica Neue",Helvetica,Arial,sans-serif;
   display: none;
 }
 
@@ -178,7 +279,7 @@ div.card-header.active-hover {
   }
 
   &.active-hover {
-    opacity: 0.9;
+    opacity: 0.8;
   }
 
   &.active-click.active-hover {
@@ -249,5 +350,16 @@ div.card-header.active-hover {
 
 /* TPC styles */
 
+/* mobile */
 
+@media screen and (max-width: 800px){
+  #form-illo {
+    display: none;
+  }
+
+  #grouped-tax-fields-accordion {
+    width: 100%;
+    
+  }
+}
 
